--- a/TetrisJuego.vcxproj
+++ b/TetrisJuego.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="game_al.c" />
     <ClCompile Include="game_sel_al.c" />
     <ClCompile Include="inicializacion_al.c" />
+    <ClCompile Include="juego.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="menu_al.c" />
     <ClCompile Include="reglas.c" />
@@ -164,7 +165,9 @@
     <ClInclude Include="botones.h" />
     <ClInclude Include="game_al.h" />
     <ClInclude Include="game_sel_al.h" />
+    <ClInclude Include="game_state_al.h" />
     <ClInclude Include="inicializacion_al.h" />
+    <ClInclude Include="juego.h" />
     <ClInclude Include="menu_al.h" />
     <ClInclude Include="piezas.h" />
     <ClInclude Include="reglas.h" />
