--- a/TetrisJuego.vcxproj
+++ b/TetrisJuego.vcxproj
@@ -149,13 +149,17 @@
     <Media Include="game.wav" />
     <Media Include="menu.wav" />
     <Media Include="play.wav" />
+    <Media Include="rotate.wav" />
     <Media Include="select.wav" />
+    <Media Include="se_game_landing.wav" />
+    <Media Include="se_game_move.wav" />
     <Media Include="tetris.wav" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="game_over.ttf" />
     <Font Include="Ice Mirror in Winter Kei.ttf" />
     <Font Include="Retronoid.ttf" />
+    <Font Include="ShortBaby-Mg2w.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="botones.c" />
