--- a/TetrisJuego.vcxproj
+++ b/TetrisJuego.vcxproj
@@ -153,9 +153,11 @@
     <Media Include="select.wav" />
     <Media Include="se_game_landing.wav" />
     <Media Include="se_game_move.wav" />
+    <Media Include="se_game_pause.wav" />
     <Media Include="tetris.wav" />
   </ItemGroup>
   <ItemGroup>
+    <Font Include="AovelSansRounded-rdDL.ttf" />
     <Font Include="game_over.ttf" />
     <Font Include="Ice Mirror in Winter Kei.ttf" />
     <Font Include="Retronoid.ttf" />
