--- a/TetrisJuego.vcxproj.filters
+++ b/TetrisJuego.vcxproj.filters
@@ -27,6 +27,7 @@
     <Font Include="fonts\Retronoid.ttf" />
     <Font Include="fonts\ShortBaby-Mg2w.ttf" />
     <Font Include="fonts\THE-GLITCH.ttf" />
+    <Font Include="fonts\budmo jiggler.otf" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
