correcciones para Linux

--- a/TetrisJuego.vcxproj
+++ b/TetrisJuego.vcxproj
@@ -140,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="Makefile" />
     <None Include="packages.config" />
     <None Include="README.md" />
   </ItemGroup>
@@ -172,29 +173,29 @@
     <Font Include="fonts\whitrabt.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="botones.c" />
+    <ClCompile Include="buttons_al.c" />
     <ClCompile Include="game_al.c" />
     <ClCompile Include="game_sel_al.c" />
     <ClCompile Include="highscore.c" />
     <ClCompile Include="highscore_al.c" />
-    <ClCompile Include="inicializacion_al.c" />
-    <ClCompile Include="juego.c" />
+    <ClCompile Include="element_al.c" />
+    <ClCompile Include="game.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="menu_al.c" />
-    <ClCompile Include="reglas.c" />
+    <ClCompile Include="rules.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="botones.h" />
+    <ClInclude Include="buttons_al.h" />
     <ClInclude Include="game_al.h" />
     <ClInclude Include="game_sel_al.h" />
-    <ClInclude Include="game_state_al.h" />
+    <ClInclude Include="game_state.h" />
     <ClInclude Include="highscore.h" />
     <ClInclude Include="highscore_al.h" />
-    <ClInclude Include="inicializacion_al.h" />
-    <ClInclude Include="juego.h" />
+    <ClInclude Include="element_al.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="menu_al.h" />
-    <ClInclude Include="piezas.h" />
-    <ClInclude Include="reglas.h" />
+    <ClInclude Include="pieces.h" />
+    <ClInclude Include="rules.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="highscore.txt" />
