--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.sourceDirectory": "${workspaceFolder}/$Recycle.Bin/S-1-5-21-2330724258-3265781333-2503569393-1001/$RD18M6N",
     "files.associations": {
         "game_state.h": "c",
-        "element_al.h": "c"
+        "element_al.h": "c",
+        "time.h": "c"
     }
 }
